# surfface-rs

./: Cargo.toml
.github/workflows/: ci.yml
src/: builder.rs  clustering.rs  core.rs  graph.rs  laplacian.rs  reduction.rs  taumode.rs
src/storage/: mod.rs  parquet.rs  test_load_from_storage.rs
src/tests/: mod.rs  test_builder.rs  test_clustering.rs  test_eigenmaps.rs  test_load_from_storage.rs  test_reduction.rs
surfface-core/: DESIGN_STEP_B2.md
surfface-core/src/: distance.rs  lib.rs  matrix.rs  mst.rs  preflight.rs  smoothing_chain.rs  sparse_mst.rs
surfface-core/src/tests/: mod.rs  test_distance.rs  test_mst.rs  test_preflight.rs
