[package]
name = "arrowspace"
version = "0.24.6"
edition = "2024"
description = "Graph-based vector search with taumode (λτ) indexing"
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mec-iS/arrowspace-rs"
homepage = "https://github.com/Mec-iS/arrowspace-rs"
documentation = "https://docs.rs/arrowspace-rs"
readme = "README.md"
keywords = ["vector-search", "spectral-analysis", "graph-signal", "similarity-search", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp",
    "*.md",
    "*.bib",
    "*.cff",
    "test_data/*",
    "examples/*"
]

[dependencies]
rand = "0.9.2"
smartcore = {version = "^0.4.7"}
ordered-float = "5.1.0"
rayon = "1.11.0"
sprs = "0.11.4"
approx = "0.5.1"
log = "0.4.28"
env_logger = "0.11.8"
dashmap = "6.1.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"

# storage feature
parquet = { version = "57.0.0", optional = true}
uuid = { version = "1.19.0", features = ["v4", "serde"], optional = true }
arrow = { version = "57.0.0", optional = true }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.149", optional = true }
chrono = { version = "0.4.42", optional = true }
csv = { version = "1.4.0", optional = true }

[dev-dependencies]
criterion = "0.7.0"
smartcore = {version = "^0.4.7", features = ["datasets"]}
rand_pcg = "0.9.0"
tempfile = "3.23.0"
rand_xoshiro = "0.7.0"

[features]
default = []
storage = ["dep:parquet", "dep:uuid", "dep:arrow", "dep:serde_json", "dep:chrono", "dep:csv"]

[lib]
name = "arrowspace"
crate-type = ["rlib"]

[examples]

[workspace]

[[bench]]
name = "index_compute_bench"
harness = false
